# pemu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-with-proxy.sh
data/common/romfs/: pron_cn_utf8.csv
pfbneo/: CMakeLists.txt
pfbneo/sources/: config.cpp  main.cpp  romlist.cpp  romlist.h  uiEmu.cpp
pfbneo/sources/fbneo/: drv.cpp
pgba/: CMakeLists.txt  README.MD
pgba/data/common/romfs/: gamelist_gb.xml  gamelist_gba.xml  gamelist_gbc.xml
pgba/data/common/romfs/skins/default/: config.cfg.override
pgba/sources/: main.cpp  pgba_config.cpp  pgba_config.h  pgba_core.cpp  pgba_core.h  pgba_io.h  pgba_romlist.cpp  pgba_romlist.h  uiEmu.cpp  uiEmu.h  uiStateMenu.cpp  uiStateMenu.h
pgba/sources/libretro/: libretro.c  libretro.h  mgba_retro_static.cmake
pgen/: CMakeLists.txt
pgen/data/common/romfs/: gamelist_gamegear.xml  gamelist_genesis.xml  gamelist_megacd.xml  gamelist_sms.xml
pgen/sources/: main.cpp  pgen_config.cpp  pgen_romlist.cpp  pgen_romlist.h  pgen_ui_emu.cpp  pgen_ui_emu.h
pnes/data/common/romfs/: gamelist_fds.xml  gamelist_nes.xml
pnes/sources/: main.cpp  pnes_config.cpp  pnes_menu.cpp  pnes_menu.h  pnes_romlist.cpp  pnes_romlist.h  uiEmu.cpp  uiEmu.h
psnes/data/common/romfs/: gamelist.xml
psnes/sources/: config.cpp  main.cpp  uiEmu.cpp  uiEmu.h  uiMenu.cpp  uiMenu.h
ui/: c2dui.h  c2dui_animated_page_text.cpp  c2dui_animated_page_text.h  c2dui_config.cpp  c2dui_config.h  c2dui_marquee_text.cpp  c2dui_marquee_text.h  c2dui_option.cpp  c2dui_option.h  c2dui_rewind_manager.h  c2dui_romlist.cpp  c2dui_romlist.h  c2dui_skin.cpp  c2dui_text_def.h  c2dui_ui_emu.cpp  c2dui_ui_emu.h  c2dui_ui_help.cpp  c2dui_ui_listbox.cpp  c2dui_ui_listbox.h  c2dui_ui_main.cpp  c2dui_ui_menu.cpp  c2dui_ui_menu.h  c2dui_ui_menu_line.cpp  c2dui_ui_menu_line.h  c2dui_ui_menu_state.cpp  c2dui_ui_romlist.cpp  c2dui_ui_romlist.h  c2dui_ui_romlist_rominfo.cpp  c2dui_ui_romlist_rominfo.h
